Change heading under the recipe's image

--- a/recipes/tteokbokki.html
+++ b/recipes/tteokbokki.html
@@ -13,7 +13,7 @@
         <img src="../img/tteokbokki.jpg"
             alt="Plate of Tteokbokki in the center with plate of noodles on the bottom left, plate of kimchi in the bottom right and a bottle of soju"
             width="500">
-        <h3>Tteokbokki</h3>
+        <h3>Description</h3>
         <p><strong><em>Sweet and spicy</em></strong> recipe for one of my favorite south korean dishes.</p>
         <p>Very <em>easy</em> to <em>make at home</em>, and it doesn't take a lot of time to do.</p>
 
