Add ingredients section

--- a/recipes/tteokbokki.html
+++ b/recipes/tteokbokki.html
@@ -17,6 +17,23 @@
         <p><strong><em>Sweet and spicy</em></strong> recipe for one of my favorite south korean dishes.</p>
         <p>Very <em>easy</em> to <em>make at home</em>, and it doesn't take a lot of time to do.</p>
 
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 kg | Tteokbokki</li>
+            <li>2    | Eggs (2 p/person)</li>
+            <li>2    | Fish balls (2 p/person)</li>
+            <li>Sauce</li>
+            <ul>
+                <li>3 tbsp | Gochujang</li>
+                <li>3 tbsp | Sugar</li>
+                <li>2 tbsp | Soy sauce</li>
+                <li>3 tbsp | Agave</li>
+                <li>4 tbsp | Ketchup</li>
+                <li>2 tbsp | Honey</li>
+                <li>50 g   | Minced garlic</li>
+            </ul>
+        </ul>
+
         <a href="../index.html">Home</a>
     </body>
 
