Format text in the ingredients section

--- a/recipes/tteokbokki.html
+++ b/recipes/tteokbokki.html
@@ -19,18 +19,18 @@
 
         <h3>Ingredients</h3>
         <ul>
-            <li>1 kg | Tteokbokki</li>
-            <li>2    | Eggs (2 p/person)</li>
-            <li>2    | Fish balls (2 p/person)</li>
-            <li>Sauce</li>
+            <li><em>1 kg</em> | Tteokbokki</li>
+            <li><em>2</em>    | Eggs (2 p/person)</li>
+            <li><em>2</em>    | Fish balls (2 p/person)</li>
+            <li><strong>Sauce</strong></li>
             <ul>
-                <li>3 tbsp | Gochujang</li>
-                <li>3 tbsp | Sugar</li>
-                <li>2 tbsp | Soy sauce</li>
-                <li>3 tbsp | Agave</li>
-                <li>4 tbsp | Ketchup</li>
-                <li>2 tbsp | Honey</li>
-                <li>50 g   | Minced garlic</li>
+                <li><em>3 tbsp</em> | Gochujang</li>
+                <li><em>3 tbsp</em> | Sugar</li>
+                <li><em>2 tbsp</em> | Soy sauce</li>
+                <li><em>3 tbsp</em> | Agave</li>
+                <li><em>4 tbsp</em> | Ketchup</li>
+                <li><em>2 tbsp</em> | Honey</li>
+                <li><em>50 g</em>   | Minced garlic</li>
             </ul>
         </ul>
 
