Add steps to cook the tteokbokki dish

--- a/recipes/tteokbokki.html
+++ b/recipes/tteokbokki.html
@@ -34,6 +34,27 @@
             </ul>
         </ul>
 
+        <h3>Steps</h3>
+        <ol>
+            <li>Boil the <em>fish balls</em> around 10 minutes, or when they begin to float. Don't forget two fish balls per person being served;</li>
+            <li>Boil the <em>eggs</em> around 10 minutes. Don't forget two eggs per person being served;</li>
+            <li><em>while the fish balls and the eggs are boiling, prepare the sauce:</em></li>
+            <ol>
+                <li>Get a bowl;</li>
+                <li>Put inside the bowl all the sauce ingredients, in no particular order;</li>
+                <li>Mix everything with a spoon until it looks uniform;</li>
+                <li><em>in this part, you can add portions as you see fit.</em></li>
+            </ol>
+            <li>Get a big pan and add the sauce you just made, and start boiling it;</li>
+            <li>When you see the sauce bubbling, you can add a little bit of water (2 cups) and wait for it to bubble again;</li>
+            <li>Insert the Tteokbokki into the pan;</li>
+            <li>Add water as you see fit, whilst mixing everything, making sure you cover all the tteokbokki with the sauce;</li>
+            <li>Boil the tteokbokki until it's very soft (like a pillow);</li>
+            <li>Add the fish balls and the eggs to the pan and mix everything again, also add water as you see fit;</li>
+            <li>Boil until the sauce is to your liking, mine is about when its consistency is similar to a yogurt;</li>
+            <li>And that's it, you did it! When serving I like to put grated cheese on top, but you don't need to. Enjoy!</li>
+        </ol>
+
         <a href="../index.html">Home</a>
     </body>
 
