--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/tteokbokki.html">Tteokbokki</a>
+        <ul>
+            <li><a href="./recipes/tteokbokki.html">Tteokbokki</a></li>
+            <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
+        </ul>
     </body>
 </html>
