--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="./recipes/tteokbokki.html">Tteokbokki</a></li>
             <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
+            <li><a href="./recipes/tuna-egg-sandwich.html">Tuna Egg Sandwich</a></li>
         </ul>
     </body>
 </html>
