Finish the contents of the tuna-egg-sandwich page

--- a/recipes/tuna-egg-sandwich.html
+++ b/recipes/tuna-egg-sandwich.html
@@ -11,6 +11,28 @@
 
         <img src="../img/tuna-egg-sandwich.jpg" alt="Tuna Egg Sandwich cut in half, on top of cutting board, with tomatoes on the side."
             width="500">
+        <h3>Description</h3>
+        <p><strong><em>Savory</em></strong> sandwich, perfect for snacking, or gym food.</p>
+        <p>Very <em>easy</em> to <em>make at home</em>, and it doesn't take a lot of time to do.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li><em>1</em>      | Eggs</li>
+            <li><em>1</em>      | Tuna Can</li>
+            <li><em>2</em>      | Bread Slices</li>
+            <li><em>3 tbsp</em> | Mayonnaise</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Boil the egg for around 10 minutes (the quantity of eggs depends on how many sandwiches, it's 1 egg for 2 sandwiches);</li>
+            <li>Get a bowl of cereals, and put the whole tuna in the tuna can, inside the bowl;</li>
+            <li>Put 2 tbsp in the bowl, and mix everything really well, until there are no more "tuna clumps";</li>
+            <li>Get the 2 slices of bread and spread the tuna-mayo mixture you just made on one side of one of the slices;</li>
+            <li>Once the egg is finished boiling, cut it into slices, and put each slice on the bread slice;</li>
+            <li>Close the sandwich with the remaining slice of bread;</li>
+            <li>Enjoy your nutritious sandwich!</li>
+        </ol>
 
         <a href="../index.html">Home</a>
     </body>
