--- a/recipes/tteokbokki.html
+++ b/recipes/tteokbokki.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Tteokbokki</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
