--- a/recipes/tuna-egg-sandwich.html
+++ b/recipes/tuna-egg-sandwich.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Tuna Edd Sandwich</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
