--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./styles/index-style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
 
-        <ul>
-            <li><a href="./recipes/tteokbokki.html">Tteokbokki</a></li>
-            <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
-            <li><a href="./recipes/tuna-egg-sandwich.html">Tuna Egg Sandwich</a></li>
-        </ul>
+        <div class="container">
+            <h1>Odin Recipes</h1>
+
+            <ul>
+                <li><a href="./recipes/tteokbokki.html">Tteokbokki</a></li>
+                <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
+                <li><a href="./recipes/tuna-egg-sandwich.html">Tuna Egg Sandwich</a></li>
+            </ul>
+        </div>
     </body>
 </html>
