Add .css file for the recipes pages

--- a/recipes/tteokbokki.html
+++ b/recipes/tteokbokki.html
@@ -5,58 +5,59 @@
     <head>
         <meta charset="UTF-8">
         <title>Tteokbokki</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../styles/recipe-page.css">
     </head>
 
     <body>
-        <h1>Tteokbokki</h1>
+        <div class="container">
+            <h1>Tteokbokki</h1>
 
-        <img src="../img/tteokbokki.jpg"
-            alt="Plate of Tteokbokki in the center with plate of noodles on the bottom left, plate of kimchi in the bottom right and a bottle of soju"
-            width="500">
-        <h3>Description</h3>
-        <p><strong><em>Sweet and spicy</em></strong> recipe for one of my favorite south korean dishes.</p>
-        <p>Very <em>easy</em> to <em>make at home</em>, and it doesn't take a lot of time to do.</p>
+            <img src="../img/tteokbokki.jpg"
+                alt="Plate of Tteokbokki in the center with plate of noodles on the bottom left, plate of kimchi in the bottom right and a bottle of soju">
+            <h3>Description</h3>
+            <p><strong><em>Sweet and spicy</em></strong> recipe for one of my favorite south korean dishes.Very <em>easy</em> 
+                to <em>make at home</em>, and it doesn't take a lot of time to do.</p>
 
-        <h3>Ingredients</h3>
-        <ul>
-            <li><em>1 kg</em> | Tteokbokki</li>
-            <li><em>2</em>    | Eggs (2 p/person)</li>
-            <li><em>2</em>    | Fish balls (2 p/person)</li>
-            <li><strong>Sauce</strong></li>
+            <h3>Ingredients</h3>
             <ul>
-                <li><em>3 tbsp</em> | Gochujang</li>
-                <li><em>3 tbsp</em> | Sugar</li>
-                <li><em>2 tbsp</em> | Soy sauce</li>
-                <li><em>3 tbsp</em> | Agave</li>
-                <li><em>4 tbsp</em> | Ketchup</li>
-                <li><em>2 tbsp</em> | Honey</li>
-                <li><em>50 g</em>   | Minced garlic</li>
+                <li><em>1 kg</em> | Tteokbokki</li>
+                <li><em>2</em>    | Eggs (2 p/person)</li>
+                <li><em>2</em>    | Fish balls (2 p/person)</li>
+                <li><strong>Sauce</strong></li>
+                <ul>
+                    <li><em>3 tbsp</em> | Gochujang</li>
+                    <li><em>3 tbsp</em> | Sugar</li>
+                    <li><em>2 tbsp</em> | Soy sauce</li>
+                    <li><em>3 tbsp</em> | Agave</li>
+                    <li><em>4 tbsp</em> | Ketchup</li>
+                    <li><em>2 tbsp</em> | Honey</li>
+                    <li><em>50 g</em>   | Minced garlic</li>
+                </ul>
             </ul>
-        </ul>
 
-        <h3>Steps</h3>
-        <ol>
-            <li>Boil the <em>fish balls</em> around 10 minutes, or when they begin to float. Don't forget two fish balls per person being served;</li>
-            <li>Boil the <em>eggs</em> around 10 minutes. Don't forget two eggs per person being served;</li>
-            <li><em>while the fish balls and the eggs are boiling, prepare the sauce:</em></li>
+            <h3>Steps</h3>
             <ol>
-                <li>Get a bowl;</li>
-                <li>Put inside the bowl all the sauce ingredients, in no particular order;</li>
-                <li>Mix everything with a spoon until it looks uniform;</li>
-                <li><em>in this part, you can add portions as you see fit.</em></li>
+                <li>Boil the <em>fish balls</em> around 10 minutes, or when they begin to float. Don't forget two fish balls per person being served;</li>
+                <li>Boil the <em>eggs</em> around 10 minutes. Don't forget two eggs per person being served;</li>
+                <li><em>while the fish balls and the eggs are boiling, prepare the sauce:</em></li>
+                <ol>
+                    <li>Get a bowl;</li>
+                    <li>Put inside the bowl all the sauce ingredients, in no particular order;</li>
+                    <li>Mix everything with a spoon until it looks uniform;</li>
+                    <li><em>in this part, you can add portions as you see fit.</em></li>
+                </ol>
+                <li>Get a big pan and add the sauce you just made, and start boiling it;</li>
+                <li>When you see the sauce bubbling, you can add a little bit of water (2 cups) and wait for it to bubble again;</li>
+                <li>Insert the Tteokbokki into the pan;</li>
+                <li>Add water as you see fit, whilst mixing everything, making sure you cover all the tteokbokki with the sauce;</li>
+                <li>Boil the tteokbokki until it's very soft (like a pillow);</li>
+                <li>Add the fish balls and the eggs to the pan and mix everything again, also add water as you see fit;</li>
+                <li>Boil until the sauce is to your liking, mine is about when its consistency is similar to a yogurt;</li>
+                <li>And that's it, you did it! When serving I like to put grated cheese on top, but you don't need to. Enjoy!</li>
             </ol>
-            <li>Get a big pan and add the sauce you just made, and start boiling it;</li>
-            <li>When you see the sauce bubbling, you can add a little bit of water (2 cups) and wait for it to bubble again;</li>
-            <li>Insert the Tteokbokki into the pan;</li>
-            <li>Add water as you see fit, whilst mixing everything, making sure you cover all the tteokbokki with the sauce;</li>
-            <li>Boil the tteokbokki until it's very soft (like a pillow);</li>
-            <li>Add the fish balls and the eggs to the pan and mix everything again, also add water as you see fit;</li>
-            <li>Boil until the sauce is to your liking, mine is about when its consistency is similar to a yogurt;</li>
-            <li>And that's it, you did it! When serving I like to put grated cheese on top, but you don't need to. Enjoy!</li>
-        </ol>
 
-        <a href="../index.html">Home</a>
+            <a href="../index.html">Home</a>
+        </div>
     </body>
 
 </html>
